# operating-systems

./: .gitignore  update.cmd  update.sh
laba1/: build.cmd  build.sh
laba1/hello_world/: CMakeLists.txt
laba2/: build.cmd  build.sh
laba2/bg_process_manager/: CMakeLists.txt  run_bg.c  run_bg.h  test_runner.c
laba2/bg_process_manager/include/: run_bg.h
laba2/bg_process_manager/src/common/: run_bg.c
laba2/bg_process_manager/src/platform/posix/: run_bg_posix.c
laba2/bg_process_manager/src/platform/windows/: run_bg_windows.c
laba2/bg_process_manager/tests/: test_runner.c
laba3/: build.cmd  build.sh
laba3/cross_platform_logger/: CMakeLists.txt
laba3/cross_platform_logger/include/shared_memory/: shared_memory.h
laba3/cross_platform_logger/include/threads/: increment.h  input.h  log_status.h  run_copies.h  stop_execution.h  threads.h
laba3/cross_platform_logger/include/utils/: is_leader.h  mutex.h  write_log.h
laba3/cross_platform_logger/logs/: log.txt
laba3/cross_platform_logger/src/common/: is_leader.c  shared_memory.c  threads.c  write_log.c
laba3/cross_platform_logger/src/common/shared_memory/: shared_memory.c
laba3/cross_platform_logger/src/common/threads/: threads.c
laba3/cross_platform_logger/src/common/utils/: is_leader.c  mutex.c  write_log.c
laba3/cross_platform_logger/src/core/: main.c
laba3/cross_platform_logger/src/platform/posix/shared_memory/: shared_memory_posix.c
laba3/cross_platform_logger/src/platform/posix/threads/: increment_posix.c  input_posix.c  log_status_posix.c  run_copies_posix.c  stop_execution_posix.c  threads_posix.c
laba3/cross_platform_logger/src/platform/posix/utils/: is_leader_posix.c  mutex_posix.c  write_log_posix.c
laba3/cross_platform_logger/src/platform/windows/shared_memory/: shared_memory_windows.c
laba3/cross_platform_logger/src/platform/windows/threads/: increment_windows.c  input_windows.c  log_status_windows.c  run_copies_windows.c  stop_execution_windows.c  threads_windows.c
laba3/cross_platform_logger/src/platform/windows/utils/: is_leader_windows.c  mutex_windows.c  write_log_windows.c
laba4/: build.cmd  build.sh  build_device_simulator.cmd  build_device_simulator.sh  run.cmd  run.sh
laba4/device_simulation_tool/: CMakeLists.txt
laba4/device_simulation_tool/src/: main.c
laba4/device_simulator/: CMakeLists.txt
laba4/device_simulator/src/: main.c
laba4/temperature_logger/: CMakeLists.txt
laba4/temperature_logger/include/: serialport_reader.h  utils.h
laba4/temperature_logger/src/common/: utils.c
laba4/temperature_logger/src/core/: main.c
laba4/temperature_logger/src/platform/posix/: serialport_reader_posix.c
laba4/temperature_logger/src/platform/windows/: serialport_reader_windows.c
laba5/: CMakeLists.txt  build.cmd  build.sh  temperature.db
laba5/client/: app.js  index.html  package-lock.json  package.json  server.js  styles.css
laba5/database/: temperature.db
laba5/database/include/: database.h
laba5/database/scripts/: generator.py  queries.sql
laba5/database/src/: database.c
laba5/device_simulator/src/: main.c
laba5/server/include/: handlers.h  server.h
laba5/server/src/: handlers.c  main.c  server.c
laba5/temperature_logger/include/: globals.h  serialport_reader.h  utils.h
laba5/temperature_logger/src/common/: utils.c
laba5/temperature_logger/src/core/: main.c
laba5/temperature_logger/src/platform/posix/: serialport_reader_posix.c
laba5/temperature_logger/src/platform/windows/: serialport_reader_windows.c
laba6/: build.cmd  build.sh  mainwindow.cpp  mainwindow.h  mainwindow.ui
